objects/CSQ_CertificationStatus__c.object
<CustomObject>
    <fields>
        <fullName>CSQ_CertificateNumber__c</fullName>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Certificate Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CSQ_CertificationLink__c</fullName>
        <label>Training Certificate Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CSQ_CertificationStatusLogo__c</fullName>
        <formula>IF(CONTAINS(Name,&apos;Master Black Belt&apos;), image(&quot;/resource/SR_Q316_CT_MasterBlackBelt&quot;,&quot;CertificationType&quot;, 20,31) , IF(CONTAINS(Name,&apos;Black Belt&apos;) &amp;&amp; NOT( CONTAINS(Name,&apos;Master&apos;)), image(&quot;/resource/SR_Q316_CT_BlackBelt&quot;,&quot;CertificationType&quot;, 20,31) , IF(CONTAINS(Name,&apos;Green Belt&apos;) &amp;&amp; ( ISPICKVAL(CSQ_Certificationstatus__c , &apos;Certified&apos;) || ISPICKVAL(CSQ_Certificationstatus__c , &apos;Certification Expired&apos;)) ,image(&quot;/resource/SR_Q316_CT_GreenBelt&quot;,&quot;CertificationType&quot;, 20,31),image(&quot;/resource/SR_Q316_CT_YellowBelt&quot;,&quot;CertificationType&quot;, 20,31))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Status Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSQ_Certification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CS&amp;Q Certification</label>
        <referenceTo>CSQ_CertificationType__c</referenceTo>
        <relationshipLabel>CSQ Training and Certification Statuses</relationshipLabel>
        <relationshipName>CSQ_Certificationpaths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSQ_Certificationstatus__c</fullName>
        <label>Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Training</fullName>
                </value>
                <value>
                    <fullName>Training Completed</fullName>
                </value>
                <value>
                    <fullName>Certification Planned</fullName>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Certification Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSQ_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSQ_ExpirationDate__c</fullName>
        <inlineHelpText>The date at which you will no longer be certified.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_HaveCompletedAllNecessaryTrainings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Completed All Necessary Trainings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSQ_InitialcertifiedDate__c</fullName>
        <inlineHelpText>The date at which you were first certified at this level.</inlineHelpText>
        <label>First Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_LastTrainingDate__c</fullName>
        <label>Last Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_LastcertifiedDate__c</fullName>
        <inlineHelpText>The date you received your last certification at this level (including renewal of the certificate).</inlineHelpText>
        <label>Latest Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_NumberOfProjectsNotMigrated__c</fullName>
        <label>Number Of Projects Managed Not Migrated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSQ_Profile__c</fullName>
        <label>CS&amp;Q Profile</label>
        <referenceTo>CSQ_Profile__c</referenceTo>
        <relationshipName>CSQ_Certificationpaths</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CSQ_StartTrainingDate__c</fullName>
        <label>Start Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSQ_TECH_Email__c</fullName>
        <description>Stores email of the CSQ Profile user - used to send Expiration Notification</description>
        <label>TECH_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSQ_TrainingStatus__c</fullName>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To be planned</fullName>
                    <default>true</default>
                    <label>To be planned</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not necessary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSQ_TrainingsAchievedandRemaining__c</fullName>
        <label>Trainings Achieved and Remaining</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_number__c</fullName>
        <label>Certificate Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IamtheOwner__c</fullName>
        <formula>CSQ_Profile__r.IambFOUser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IamtheOwner</label>
        <type>Checkbox</type>
    </fields>
    <label>CSQ Training and Certification Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CSQ_LastcertifiedDate__c</columns>
        <columns>CSQ_ExpirationDate__c</columns>
        <columns>CSQ_CertificationStatusLogo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CIS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Certification_status_Of_Current_User</fullName>
        <columns>NAME</columns>
        <columns>CSQ_Profile__c</columns>
        <columns>CSQ_Certification__c</columns>
        <columns>CSQ_Certificationstatus__c</columns>
        <columns>CSQ_CertificationStatusLogo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSQ_Certificationstatus__c</field>
            <operation>equals</operation>
            <value>Certified</value>
        </filters>
        <filters>
            <field>IamtheOwner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Certification status Of Current User</label>
        <language>en_IN</language>
    </listViews>
    <nameField>
        <label>Certification Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSQ Training and Certification Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Q316_CS_CertifiedMandatoryFields</fullName>
        <active>true</active>
        <description>Q3 2016 Release : Please fill in the following fields : Start Training Date, Last Training Date, Initial Certification Date and Last Certified Date for certification status &quot;Certified&quot;</description>
        <errorConditionFormula>AND( NOT( $User.BypassVR__c ) ,  ISPICKVAL( CSQ_Certificationstatus__c , &quot;Certified&quot;) , OR( ISBLANK( CSQ_StartTrainingDate__c ) , ISBLANK( CSQ_LastTrainingDate__c) , ISBLANK(  CSQ_InitialcertifiedDate__c ) , ISBLANK(  CSQ_LastcertifiedDate__c )))</errorConditionFormula>
        <errorMessage>Please fill in the following fields : Start Training Date, Last Training Date, First Certified Date and Last Certified Date for certification status &quot;Certified&quot;</errorMessage>
    </validationRules>
</CustomObject>